@@ -3,6 +3,9 @@ CHANGES.txt - 08/04/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The lp and lpr commands did not error out properly when
+	  they were unable to write to a temporary file (STR
+	  #1129)
 	- The pstops filter did not handle Adobe-specific
 	  comments in Windows NT driver output (STR #1085)
 	- "lpstat -l -p" incorrectly reported the printer
